--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -23,6 +23,12 @@
 
   <style>
 
+    :root {
+      --spacing: 10px;
+      --blur: 10px;
+      --base: #ffc600;
+    }
+
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -43,9 +49,32 @@
     input {
       width: 100px;
     }
+
+    img {
+      padding: var(--spacing);
+      filter: blur(var(--blur));
+      background-color: var(--base);
+    }
+
   </style>
 
   <script>
+    let inputs = document.querySelectorAll(".controls input");
+
+    function styleUpdate(){
+      // a || b -> if a is true, then return a; otherwise return b (Logical operators)
+      let unit = this.dataset.sizing || "";
+      // need apply the style on more than one element, therefore apply the style CSS variable on html(could apply on the same time)
+      let html = document.documentElement;
+      // style.setProperty(property,value) equal to style.property = value
+      // Using the former method will easy for applying on a variable
+      html.style.setProperty(`--${this.name}`,`${this.value}`+ unit);
+    }
+
+    inputs.forEach(input => input.addEventListener("change",styleUpdate));
+    // input event fires when the value of an <input>, <select>, or <textarea> element has been changed as a direct result of a user action 
+    inputs.forEach(input => input.addEventListener("input",styleUpdate));
+    
   </script>
 
 </body>
