--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,16 +27,36 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    let isAdult = people.some(({year}) => (new Date()).getFullYear() - year >= 19);
+    console.log(isAdult);
+
     // Array.prototype.every() // is everyone 19 or older?
+    let isAllAdult = people.every(({year}) => (new Date()).getFullYear() - year >= 19);
+    console.log(isAllAdult);
+
 
     // Array.prototype.find()
-    // Find is like filter, but instead returns just the one you are looking for
+    // Find is like filter, but instead returns "just the one" you are looking for
     // find the comment with the ID of 823423
+    let comment = comments.find(({id}) => id === 823423);
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
-    // delete the comment with the ID of 823423
+    let idx = comments.findIndex(({id}) => id === 823423);
+    console.log(idx);
 
+    // delete the comment with the ID of 823423
+    // will change origin array
+    // comments.splice(idx,1);
+    // console.table(comments);
+
+    // won't change origin array => create new array
+    let newComments = [
+      ...comments.slice(0,idx),
+      ...comments.slice(idx + 1)
+    ];
+    console.table(newComments);
   </script>
 </body>
 </html>
