--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -14,18 +14,44 @@
   // re-defined canvas size to whole window
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
+
   // define line(stroke) style
-  context.strokeStyle = "blue";
+  // context.strokeStyle = "blue"; // comment due to it changing when drawing
+  // context.lineWidth = 15; // comment due to it changing when drawing
   context.lineJoin = "round";
   context.lineCap = "round";
+  
   // setup stroke position
   let lastX = 0;
   let lastY = 0;
   // to determine it is drawing or not
   let isDrawing = false;
+  // variable for color style
+  let hue = 0;
+  // variable for lineWidth
+  let direction = true;
 
   function drawAction(event){
     if(isDrawing){
+      // change line color: hsl(hue, saturation, lightness)
+      context.strokeStyle = `hsl(${hue}, 100%, 50%)`; 
+      hue++;
+      // Hue is a degree on the color wheel from 0 to 360.
+      // hue maximum is 360, when over 360 the value will keep going up, but the color will restart from 0
+      if(hue > 360){
+        hue = 0;
+      }
+
+      // lineWidth will increase/decrease while drawing
+      if(direction){
+        context.lineWidth++;
+      }else{
+        context.lineWidth--;
+      }
+      if(context.lineWidth == 50 || context.lineWidth == 1){
+        direction = !direction;
+      }
+      
       // create a new path
       context.beginPath();
       // start from
@@ -34,6 +60,7 @@
       context.lineTo(event.offsetX, event.offsetY);
       // stroke(draw) the current or given path with the current stroke style
       context.stroke();
+
       // use previous point end position be next point start position => continuous line
       [lastX,lastY] = [event.offsetX,event.offsetY];
     }
@@ -48,7 +75,7 @@
   canvas.addEventListener("mousemove",drawAction);
   // mouse up, mouse out => isDrawing flag off
   canvas.addEventListener("mouseup",() => isDrawing = false);
-  canvas.addEventListener("mouseout",() => isDrawing = false);
+  canvas.addEventListener(" ",() => isDrawing = false);
 </script>
 
 <style>
