update mouseout EventListener

--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -75,7 +75,7 @@
   canvas.addEventListener("mousemove",drawAction);
   // mouse up, mouse out => isDrawing flag off
   canvas.addEventListener("mouseup",() => isDrawing = false);
-  canvas.addEventListener(" ",() => isDrawing = false);
+  canvas.addEventListener("mouseout",() => isDrawing = false);
 </script>
 
 <style>
