add scroll event listener functiom

--- a/13 - Slide in on Scroll/index-START.html
+++ b/13 - Slide in on Scroll/index-START.html
@@ -58,7 +58,10 @@
         if (callNow) func.apply(context, args);
       };
     }
-
+    function sildeIn(event){
+      console.log(event)
+    }
+    window.addEventListener("scroll",sildeIn);
   </script>
 
   <style>
