--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -9,47 +9,112 @@
 
   <script>
     // start with strings, numbers and booleans
+    let age = 100;
+    let age2 = age;
+    console.log(age,age2);
+    age = 200;
+    console.log(age,age2);
+
+    let name = "Alyce";
+    let name2 = name;
+    console.log(name,name2);
+    name = "AlyceAlyce";
+    console.log(name,name2);
+
+    let isWakeUp = true;
+    let isWakeUp2 = isWakeUp;
+    console.log(isWakeUp,isWakeUp2);
+    isWakeUp = false;
+    console.log(isWakeUp,isWakeUp2);
+
 
     // Let's say we have an array
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
+    const team = players; // an array reference
+    console.log(team); 
 
     // You might think we can just do something like this:
-
+    team[3] = "Lux";
+    console.log(team);
+    console.log(players); 
     // however what happens when we update that array?
-
     // now here is the problem!
-
     // oh no - we have edited the original array too!
-
     // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
-    // So, how do we fix this? We take a copy instead!
 
+    // So, how do we fix this? We take a copy instead!
     // one way
+    const team2 = players.slice();
+    console.log(team2);
+    team2[3] = "cool";
+    console.log(team2);
+    console.log(players);
 
     // or create a new array and concat the old one in
+    const team3 = [].concat(players);
+    console.log(team3);
+    team3[3] = "heyy";
+    console.log(team3);
+    console.log(players);
 
     // or use the new ES6 Spread
+    const team4 = [...players];
+    team4[3] = "hiii";
+    console.log(team4);
+    console.log(players);
 
+    // or use Array.from
+    const team5 = Array.from(players);
+    team5[3] = "yooo";
+    console.log(team5);
+    console.log(players);
     // now when we update it, the original one isn't changed
 
-    // The same thing goes for objects, let's say we have a person object
 
+    // The same thing goes for objects, let's say we have a person object
     // with Objects
     const person = {
       name: 'Wes Bos',
       age: 80
     };
-
     // and think we make a copy:
+    const captain = person;
+    captain.number = 99;
+    console.log(captain);
+    console.log(person);
 
     // how do we take a copy instead?
+    const cap2 = Object.assign({},person,{age: 18, id: 1});
+    console.log(cap2);
+    console.log(person);
 
-    // We will hopefully soon see the object ...spread
+    // the object ...spread
+    const cap3 = {...person};
+    cap3.name = "Alyce";
+    console.log(cap3);
+    console.log(person);
+
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+    const wes = {
+      name: 'Wes',
+      age: 100,
+      social: {
+        twitter: '@wesbos',
+        facebook: 'wesbos.developer'
+      }
+    };
+    const dev = Object.assign({},wes);
+    const dev2 = JSON.parse(JSON.stringify(wes));
+    dev.social.twitter = "@coolman";
+    console.log(dev);
+    console.log(wes);
+    dev2.social.twitter = "@yoooooo";
+    console.log(dev2);
+    console.log(wes);
 
   </script>
 
