--- a/17 - Sort Without Articles/index-START.html
+++ b/17 - Sort Without Articles/index-START.html
@@ -41,16 +41,22 @@
       color: #ffc600;
       text-decoration: none;
     }
-
   </style>
 
   <ul id="bands"></ul>
 
-<script>
-const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
+  <script>
+    const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
 
+    function filterStr(string){
+      return string.replace(/^(a |the |an )/i,"");
+    }
+    bands.sort((a,b) => filterStr(a) > filterStr(b) ? 1 : -1);
 
-</script>
+    const container = document.querySelector("#bands");
+    container.innerHTML = bands.reduce((sum,item) => {return sum +=`<li>${item}</li>`},"");
+
+  </script>
 
 </body>
 </html>
