--- a/23 - Speech Synthesis/index-START.html
+++ b/23 - Speech Synthesis/index-START.html
@@ -21,8 +21,8 @@
       <input name="rate" type="range" min="0" max="3" value="1" step="0.1">
 
       <label for="pitch">Pitch:</label>
-
       <input name="pitch" type="range" min="0" max="2" step="0.1">
+
       <textarea name="text">Hello! I love JavaScript 👍</textarea>
       <button id="stop">Stop!</button>
       <button id="speak">Speak</button>
@@ -30,12 +30,80 @@
     </div>
 
 <script>
-  const msg = new SpeechSynthesisUtterance();
-  let voices = [];
   const voicesDropdown = document.querySelector('[name="voice"]');
   const options = document.querySelectorAll('[type="range"], [name="text"]');
   const speakButton = document.querySelector('#speak');
   const stopButton = document.querySelector('#stop');
+  
+  // create SpeechSynthesisUtterance object to put speech information
+  const msg = new SpeechSynthesisUtterance();
+  let voices = [];
+  console.log(msg);
+  msg.text = document.querySelector('[name="text"]').value;
+
+  function populateVoices(){
+    // getVoices(): get the list of SpeechSynthesisVoice objects 
+    voices = this.getVoices();
+    // 1. create options
+    // const voiceOptions = voices.reduce((sum,{name,lang}) => {
+    //   return sum += `<option value='${name}'>${name}(${lang})</option>`
+    // },"");
+    // voicesDropdown.innerHTML += voiceOptions;
+    
+    // 2. create options and add optgroup by lang
+    const voiceGroupsCount = voices.reduce((sum,{lang}) => {
+      !sum[lang] ? sum[lang] = 1 : sum[lang]+= 1;
+      return sum
+    },{});
+
+    Object.keys(voiceGroupsCount).sort().forEach(item => {
+      const optgroup = document.createElement('optgroup');
+      optgroup.setAttribute('label',item);
+      voicesDropdown.appendChild(optgroup);
+    });
+
+    const voiceGroups = document.querySelectorAll('optgroup');
+    voices.forEach(({name,lang}) => {
+      voiceGroups.forEach((group) => {
+        if(lang === group.label){
+          const option = document.createElement('option');
+          option.setAttribute('value',name);
+          option.textContent = `${name}`;
+          group.appendChild(option);
+        }
+      });
+    });
+  }
+
+  function setVoice(){
+    // when select a voice, put the information to SpeechSynthesisUtterance object
+    msg.voice = voices.find(voice => voice.name === this.value);
+    toggle();
+  }
+
+  function setOptions(){
+    // when change the rate/patch/text value, put the value to SpeechSynthesisUtterance object
+    msg[this.name] = this.value;
+    // when type the text, don't trigger speak
+    if(this.name !== "text"){
+      toggle();
+    }
+  }
+
+  function toggle(startOver = true){
+    speechSynthesis.cancel();
+    // if startOver is false, don't trigger speak
+    if(startOver){
+      speechSynthesis.speak(msg);
+    }
+  }
+
+  speechSynthesis.addEventListener('voiceschanged',populateVoices);
+  voicesDropdown.addEventListener('change',setVoice);
+  options.forEach(option => option.addEventListener('input',setOptions));
+  speakButton.addEventListener('click',toggle);
+  stopButton.addEventListener('click',() => toggle(false));
+
 </script>
 
 </body>
