--- a/29 - Countdown Timer/index.html
+++ b/29 - Countdown Timer/index.html
@@ -20,8 +20,12 @@
       </form>
     </div>
     <div class="display">
-      <h1 class="display__time-left"></h1>
+      <h1 class="display__time-left">00:00</h1>
       <p class="display__end-time"></p>
+      <div class="timer__functions">
+        <button>STOP</button>
+        <button>CONTINUE</button>
+      </div>
     </div>
   </div>
 
